feat: various tweaks to songs, song, show pages
- add artwork to notable track pages
- remove DJ set tracks from songs page
- order songs within albums correctly on songs page
- correct show counts on songs page
- display notables with notes at top of song pages
- show notables with notes on show pages
- add songs, song & albums endpoints to API
